Updated to Java 11. Fixed positioning of export list button. Updated README.md